Update project to use kmp template